cicd/kustomize/argo-workflows/namespace-install/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-server
  annotations:
    external-dns.alpha.kubernetes.io/alias: "true"
    external-dns.alpha.kubernetes.io/target: target.example.com
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: argo-server
              servicePort: 2746
            # path: /argo(/|$)(.*)
            path: /
      host: argo.cicd.localhost
